--- a/Lab4_Association_1/Lab4_Association_1.vcxproj.filters
+++ b/Lab4_Association_1/Lab4_Association_1.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="Avto.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="Koleso.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Avto.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="Koleso.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
