--- a/Lab4_Association_1/Lab4_Association_1.vcxproj
+++ b/Lab4_Association_1/Lab4_Association_1.vcxproj
@@ -142,10 +142,12 @@
     <ClCompile Include="Avto.cpp" />
     <ClCompile Include="Koleso.cpp" />
     <ClCompile Include="Lab4_Association_1.cpp" />
+    <ClCompile Include="Voditel.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Avto.h" />
     <ClInclude Include="Koleso.h" />
+    <ClInclude Include="Voditel.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
