Добавлен класс Motor

--- a/Lab4_Association_1/Lab4_Association_1.vcxproj.filters
+++ b/Lab4_Association_1/Lab4_Association_1.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="Voditel.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="Motor.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Avto.h">
@@ -36,6 +39,9 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="Voditel.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="Motor.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
