--- a/Lab4_Association_1/Lab4_Association_1.vcxproj.filters
+++ b/Lab4_Association_1/Lab4_Association_1.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="Motor.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="Obchee.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Avto.h">
@@ -42,6 +45,9 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="Motor.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="Obchee.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
