Добавлен класс Korobka

--- a/Lab4_Association_1/Lab4_Association_1.vcxproj.filters
+++ b/Lab4_Association_1/Lab4_Association_1.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="Obchee.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="Korobka.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Avto.h">
@@ -48,6 +51,9 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="Obchee.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="Korobka.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
