--- a/Lab4_Association_1/Lab4_Association_1.vcxproj
+++ b/Lab4_Association_1/Lab4_Association_1.vcxproj
@@ -141,6 +141,7 @@
   <ItemGroup>
     <ClCompile Include="Avto.cpp" />
     <ClCompile Include="Koleso.cpp" />
+    <ClCompile Include="Korobka.cpp" />
     <ClCompile Include="Lab4_Association_1.cpp" />
     <ClCompile Include="Motor.cpp" />
     <ClCompile Include="Obchee.cpp" />
@@ -149,6 +150,7 @@
   <ItemGroup>
     <ClInclude Include="Avto.h" />
     <ClInclude Include="Koleso.h" />
+    <ClInclude Include="Korobka.h" />
     <ClInclude Include="Motor.h" />
     <ClInclude Include="Obchee.h" />
     <ClInclude Include="Voditel.h" />
