--- a/Lab4_Association_1/Lab4_Association_1.vcxproj
+++ b/Lab4_Association_1/Lab4_Association_1.vcxproj
@@ -155,6 +155,9 @@
     <ClInclude Include="Obchee.h" />
     <ClInclude Include="Voditel.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
